# automataii

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .gitignore  160_PERCENT_VALIDATION.md  AGENTS.md  ANCHOR_POSITIONING_ANALYSIS.md  APP_CRASH_FIXED.md  ARCHITECTURE_STATUS.md  ARCHITECTURE_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_160_VALIDATION.md  COMPREHENSIVE_VERIFICATION_SETUP_REPORT.md  COMPUTATIONAL_MECHANICAL_CHARACTER_ANALYSIS.md  CRITICAL_ISSUES_FIXED.md  CRITICAL_ISSUES_IDENTIFIED.md  Dockerfile  EDITOR_TAB_TEST_GUIDE.md  FINAL_SYSTEM_VERIFICATION.py  FINAL_VALIDATION_SUMMARY.md  FINAL_VERIFICATION_DELIVERABLES.md  GEMINI.md  IK_SOLVER_USAGE_ANALYSIS.md  IMAGE_PROCESSING_VIEW_FEATURES.md  INTELLIGENT_ANCHOR_POSITIONING_COMPLETE.md  MACANISM_IMPLEMENTATION_STRATEGY.md  MANUAL_UI_VERIFICATION_CHECKLIST.md  MECHANISM_ISSUES_COMPREHENSIVE_ANALYSIS.md  MECHANISM_SYSTEM_ENHANCEMENT_COMPLETE.md  MODULAR_ARCHITECTURE_PLAN.md  Makefile  PAPER.md  PAPER_IMPL_.md  PHASE1_MATHEMATICAL_VERIFICATION_REPORT.md  PHASE4_INTEGRATION_COMPLETE.md  PHYSICS_INTEGRATION_GUIDE.md  PHYSICS_INTEGRATION_IMPLEMENTATION_COMPLETE.md  README.md  REFACTORING_PLAN.md  REFACTOR_ANALYSIS.md  (+110 more)
.serena/: project.yml
arch/: added-web-features.md  feature-traceability.md  ui-ux-flow-audit.md  web-migration-architecture.md  web-migration-plan.md
backup_original_files/: mechanism_design_tab.py.original
docs/: BUILD_SETUP.md  CAM_DECOUPLING_ANALYSIS.md  CAM_MECHANISM_IMPROVEMENTS.md  DEPLOYMENT.md  MECHANISM_TYPE_CONSISTENCY_SUMMARY.md  QUICK_BUILD.md  README.md  SKELETON_FEATURES.md  SPARKLE_SETUP.md  deployment.md  fcpxml_generator.md  macos-distribution.md  mechanism-blueprint-manual.md  paper.md  platform-rebuild-porting-flow.md  research_contributions.md  task.md  task_mechanism_visualization_fix.md  task_template.md  test_for_IKmanager.md  typing-debt.md  z_axis_layering.md
fabrication/: README.md  manifest.json
kit/: MS4N_KIT_README.md  generate_ms4n_kit.py  ms4n-kit-manifest.json
models/: Dockerfile  README.md  test_complete_legacy.py
plan/: 00-ms4n-plan-index.md  01-software-change-plan.md  02-wow-kit-module-plan.md  03-chi-hci-research-plan.md  04-evidence-and-test-plan.md  05-review-gate-and-risk-register.md  06-ms4n-wild-chi-directions.md  07-ms4n-autoresearch-review-loop.md  08-ms4n-jams-as-explanations-execution-plan.md  09-ms4n-implementation-architecture-plan.md  10-ms4n-p0-implementation-task-breakdown.md  11-ms4n-implementation-test-plan.md  12-ms4n-implementation-prd.md  13-ms4n-implementation-test-spec.md  14-ms4n-implementation-code-review.md  15-ms4n-lab-rename-code-review.md  16-mechanism-foundry-right-panel-research-redesign.md
scripts/: README_unused_code_finder.md  REFACTOR_README.md  broken_method_checker.py  build.py  build_experiment.py  build_linux.py  build_macos.py  build_simple.py  build_windows.py  check_mypy_baseline.py  check_ota_reachability.py  collect_scenario_metrics.py  download_utils.py  find_and_remove_unused_code.py  generate_appcast.py  generate_enhanced_dataset.py  generate_fabrication_templates.py  generate_fcpxml.py  golden_master.py  import_analyzer.py  install_sparkle.py  macos_arch.py  macos_notary.py  migrate_imports.py  mypy_baseline.json  phase2_migrate.sh  publish_ota_pages.py  pyinstaller_datas.py  refactor_tool.py  regenerate_cam_data.py  release_macos.py  report_repo_health.py  run_dead_code_scan.sh  semantic_analyzer.py  sign_notarize_dmg.sh  validate_appcast.py  verify_macos_release.py  verify_onnx_models.py  verify_windows_certificate.py
src/: 3dplan.md  __init__.py  app_full_log.txt  app_log.txt  automata_base.md  demo_app.py  example.py  full_log.txt  paper-plan.md  refactor.md  run_all_tests.py  test_automata_base_integration.py  test_basic_functionality.py  test_core_services.py  test_e2e_workflow.py  test_log.txt  test_report.txt  test_simple.py  test_smoke.py  test_ui_components.py
src/automataii/modules/automata_base/: COMPLETION_SUMMARY.md  FINAL_STATUS_REPORT.md  IMPORT_FIX_SUMMARY.md  README.md  TEST_SUMMARY.md  __init__.py  _import_helper.py  comprehensive_test.py  demo_absolute_imports.py  demo_enhanced_svg.py  dxf_comparison.md  example.py  final_working_test.py  integration_example.py  pyproject.toml  quick_test.py  run_all_tests.py  setup.py  simple_test.py  test_all.py  test_all_fixes.py  test_converters_fix.py  test_converters_simple.py  test_cost_calculator.py  test_dashboard.py  test_dxf_export.py  test_dxf_standalone.py  test_final.py  test_functionality.py  test_imports.py  test_imports_absolute.py  test_imports_fixed.py  test_pdf_generation.py  test_placement_optimizer.py  test_simple.py  test_step_export.py  test_stl_export.py  test_suite.py  todo.md  verify_all.py  (+4 more)
src/automataii/modules/automata_base/assembly/: __init__.py
src/automataii/modules/automata_base/config/: __init__.py  base_specs.py
src/automataii/modules/automata_base/data/: mechanism_placement_dataset.py
src/automataii/modules/automata_base/enums/: __init__.py  base_types.py
src/automataii/modules/automata_base/gui/: __init__.py  base_designer_dialog.py  base_preview_widget.py  base_selection_widget.py  dimension_input_widget.py  material_selection_widget.py
src/automataii/modules/automata_base/models/: __init__.py  assembly_info.py  base_config.py  dimensions.py
src/automataii/modules/automata_base/tests/: README_GUI_TESTS.md  run_gui_tests.py  test_gui_base_designer_dialog.py  test_gui_base_preview_widget.py  test_gui_base_selection_widget.py  test_gui_dimension_input_widget.py  test_gui_integration.py  test_gui_material_selection_widget.py
src/automataii/modules/automata_base/utils/: __init__.py  converters.py  cost_calculator.py  pdf_generator.py  placement_optimizer.py  step_exporter.py  stl_exporter.py  validators.py
src/automataii/native/: CMakeLists.txt  __init__.py  arap_native.cpp  build.py
tasks/: ARAP_IK_Integration_Plan.md  blueprint.md  completed_task_animation_integration_fixes_2025-06-19.md  completed_task_mechanism_visualization_system_repair_2025-06-19.md  ultrathink_arch.md  (+2 more)
tests/: conftest.py  (+116 more)
(+1519 files in other folders)
