[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automataii"
version = "0.1.0"
description = "A project for animating figure drawings and generating mechanisms."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Choose appropriate license
    "Operating System :: OS Independent",
]
dependencies = [
    "PyQt5",
    "numpy",
    "scipy",
    "svgpathtools", # For blueprint generation
    "pydantic>=1.0,<2.0", # Constraint from instructions
    "torch",
    "torchvision",
    "segment-anything", # For CharSegNet
    "opencv-python-headless", # Often needed with torch/vision
    "shapely", # Potential use in geometry/path operations
    # Add other core dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff", # Linter/formatter
    "mypy", # Static type checker
    # Add other development dependencies
]

[project.urls]
"Homepage" = "https://github.com/yourusername/automataii" # Replace with actual URL
"Bug Tracker" = "https://github.com/yourusername/automataii/issues" # Replace

[tool.setuptools.packages.find]
where = ["src"]

# Add ruff configuration if you use it
#[tool.ruff]
# line-length = 88
# select = ["E", "W", "F", "I", "UP"]
# ignore = []

# Add mypy configuration if you use it
#[tool.mypy]
# python_version = "3.9"
# warn_return_any = true
# warn_unused_configs = true
