[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automataii"
version = "0.1.0"
description = "AI-powered character animation system with pose estimation and ONNX deployment"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    {name = "Alan Synn", email = "alan@alansynn.com"},
]
keywords = ["animation", "pose-estimation", "computer-vision", "onnx", "mmpose", "mmdetection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=2.0.0",
    "onnxruntime>=1.22.0",
    "opencv-python>=4.11.0",
    "pyqt6>=6.8.0",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.0",
    "pillow>=10.0.0",
    "matplotlib>=3.9.0",
    "pydantic>=2.11.7",
    "psutil>=7.0.0",
    "requests>=2.32.4",
    "python-constraint>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/alansynn/automataii"
Repository = "https://github.com/alansynn/automataii.git"
Issues = "https://github.com/alansynn/automataii/issues"

[project.scripts]
automataii = "automataii.app.main:main"
automataii-animate = "automataii.animate.image_to_annotations:main"

[tool.hatch.build.targets.wheel]
packages = ["src/automataii"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=automataii",
    "--cov-report=term-missing",
    "-v",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
