[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automataii"
version = "0.1.1"
description = "Interactive mechanism design and character animation platform"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    {name = "Automataii Contributors"},
]
keywords = ["mechanism-design", "linkage", "kinematics", "cam", "character-animation", "pyqt6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=2.0.0",
    "onnxruntime>=1.22.0",
    "opencv-python>=4.11.0",
    "pyqt6>=6.8.0",
    "pyyaml>=6.0.2",
    "scipy>=1.15.0",
    "pillow>=10.0.0",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
acceleration = [
    "numba>=0.60.0",
    "PyOpenGL>=3.1.7",
    "PyOpenGL-accelerate>=3.1.7",
]
model-download = [
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://github.com/AlanSynn/automataii"
Repository = "https://github.com/AlanSynn/automataii.git"
Issues = "https://github.com/AlanSynn/automataii/issues"

[project.scripts]
automataii = "automataii.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/automataii"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "UP046", # PEP 695 type params for classes - requires Python 3.12+
    "UP047", # PEP 695 type params for functions - requires Python 3.12+
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true


[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.8.0",
]
build = [
    "pyinstaller>=6.15.0",
]
build-macos = [
    "pyinstaller>=6.15.0",
    "dmgbuild>=1.6.5",
]
